force-app/main/default/objects/Campaign_Insights__c/Campaign_Insights__c.object-meta.xml
<CustomObject>
    <label>Campaign Insights</label>
    <nameField>
        <label>Insight Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaign Insights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>