force-app/main/default/objects/Campaign_Insights__c/fields/Actionable__c.field-meta.xml
<CustomField>
    <fullName>Actionable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Actionable</label>
    <type>Checkbox</type>
</CustomField>