force-app/main/default/objects/Campaign_Insights__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Campaign</label>
    <referenceTo>Campaign__c</referenceTo>
    <relationshipLabel>Campaign Insights</relationshipLabel>
    <relationshipName>Campaign_Insights</relationshipName>
    <type>Lookup</type>
</CustomField>