force-app/main/default/objects/Campaign_Insights__c/fields/Confidence_Score__c.field-meta.xml
<CustomField>
    <fullName>Confidence_Score__c</fullName>
    <label>Confidence Score</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>