force-app/main/default/objects/Campaign_Insights__c/fields/Customer_Journey__c.field-meta.xml
<CustomField>
    <fullName>Customer_Journey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Journey</label>
    <referenceTo>Customer_Journey__c</referenceTo>
    <relationshipLabel>Campaign Insights</relationshipLabel>
    <relationshipName>Campaign_Insights</relationshipName>
    <type>Lookup</type>
</CustomField>