force-app/main/default/objects/Campaign_Insights__c/fields/Data_Context__c.field-meta.xml
<CustomField>
    <fullName>Data_Context__c</fullName>
    <label>Data Context</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>