force-app/main/default/objects/Campaign_Insights__c/fields/Insight_ID__c.field-meta.xml
<CustomField>
    <fullName>Insight_ID__c</fullName>
    <externalId>true</externalId>
    <label>Insight ID</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>