force-app/main/default/objects/Campaign_Insights__c/fields/Insight_Text__c.field-meta.xml
<CustomField>
    <fullName>Insight_Text__c</fullName>
    <label>Insight Text</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>