force-app/main/default/objects/Campaign_Insights__c/fields/Insight_Type__c.field-meta.xml
<CustomField>
    <fullName>Insight_Type__c</fullName>
    <label>Insight Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Performance_Analysis</fullName>
                <label>Performance Analysis</label>
            </value>
            <value>
                <fullName>Budget_Optimization</fullName>
                <label>Budget Optimization</label>
            </value>
            <value>
                <fullName>Attribution_Recommendation</fullName>
                <label>Attribution Recommendation</label>
            </value>
            <value>
                <fullName>Trend_Analysis</fullName>
                <label>Trend Analysis</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>