force-app/main/default/objects/Campaign_Insights__c/fields/LLM_Model__c.field-meta.xml
<CustomField>
    <fullName>LLM_Model__c</fullName>
    <label>LLM Model</label>
    <length>50</length>
    <type>Text</type>
</CustomField>